Fix một số lỗi: wanning tippy, scrollbar

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -26,6 +26,7 @@
     --white: white;
     --text-color: black;
     --color-hover: #f5f5f5;
+    --font-text: 'ProximaNova', sans-serif;
 }
 
 html {
@@ -38,7 +39,7 @@ html {
     padding: 0;
 }
 body {
-    font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-text);
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
@@ -48,7 +49,7 @@ img {
     display: block;
 }
 button {
-    font-family: 'ProximaNova', sans-serif ;
+    font-family: var(--font-text);
     cursor: pointer;
 }
 
@@ -61,6 +62,31 @@ a {
     outline: none;
 }
 
+// scrollBar CSS
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0); 
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
 // Custom Tippy
 
 body {
