--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,9 +1,13 @@
 .wrapper {
+    position: fixed;
+    top: 0px;
+    left: 0px;
     width: 100%;
     height: var(--default-layout-height-header);
     box-shadow: 0px 1px 1px rgb(0 0 0/12%);
     display: flex;
     justify-content: center;
+    background-color: var(--white);
 }
 .inner {
     height: 100%;
