--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -28,6 +28,7 @@
         font-size: 16px;
         border: none;
         outline: none;
+        font-family: var(--font-text);
     }
     input:not(:placeholder-shown) ~ .search-btn {
         color: var(--black);
