--- a/src/components/Popper/Wrapper.module.scss
+++ b/src/components/Popper/Wrapper.module.scss
@@ -1,8 +1,10 @@
 .wrapper {
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    min-height: 120px;
     max-height: min((100vh - 96px) - 60px, 734px);
     background: rgb(255, 255, 255);
     box-shadow: rgb(0 0 0/12%) 0px 2px 12px;
     border-radius: 8px;
+    
 }
